cs352/proj3/tests/type_rules/type_err/10.js
<script type="text/JavaScript">
var x = 1 + "a"
if(x && 1){
	x = x + 1
}
</script>
